# llmops-api

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 03d9e296446a_角色表.py  074bb0bcb14e_action添加路径和方法.py  0b6d1c3494b4_casbin_column_nullable.py  23142990bd04_casbin.py  29b81ff47485_action_name_unique.py  2a5488ce0dc2_插件相关表.py  35d7daefdb98_插件参数表.py  3cc53bfb4156_知识库相关表约束.py  4d3331f2be7d_知识库相关表.py  567ee1866ad2_菜单软删除.py  68543f8c90b3_action.py  7e4c2dad874b_casbin_column_nullable.py  aac351c6383e_插件其他相关表.py  af2bb25991c2_菜单相关表.py  b529b6344784_add_knowledge_document_process_status.py  bb0e220bb3b9_用户表.py  bdd9ca7799cc_字段名称修改.py  ccffb52c2466_db_init.py  e0c7da2809a3_menu_name_not_unique.py
src/llmops_api/: __init__.py  main.py
src/llmops_api/api/: action.py  auth.py  knowledge.py  menu.py  menu_action.py  permissisons.py  role.py  user.py
src/llmops_api/api/container/: auth.py  role.py
src/llmops_api/base/casbin/: adapter.py  enforcer.py  watcher.py
src/llmops_api/base/celery/: base.py  models.py  progress.py  serializer.py
src/llmops_api/base/config/: __init__.py  config.py
src/llmops_api/base/container/: __init__.py  container.py
src/llmops_api/base/db/: __init__.py  engine.py  model.py  repo.py
src/llmops_api/base/enum/: __init__.py  labeled_enum.py
src/llmops_api/base/exception/: __init__.py  biz_error.py  error_response.py  exception_handler.py
src/llmops_api/base/logger/: __init__.py  logger.py
src/llmops_api/base/redis/: pool.py
src/llmops_api/base/response/: __init__.py  base_response.py  config.py
src/llmops_api/base/routers/: __init__.py  config.py
src/llmops_api/base/view/: model.py  relation.py
src/llmops_api/celery/: base.py  serializer.py
src/llmops_api/const/: constant.py
src/llmops_api/container/: action.py  document.py  knowledge.py  menu.py  permissions.py  user.py
src/llmops_api/depends/: auth.py  permission.py
src/llmops_api/enum/: knowledge.py  menu.py  plugins.py
src/llmops_api/exception/: action.py  auth.py  menu.py  role.py  user.py
src/llmops_api/form/: action.py  auth.py  menu.py  menu_action.py  permissions.py  role.py  user.py
src/llmops_api/llm/chatmodels/: ark_chat.py
src/llmops_api/llm/embed/: qwen.py
src/llmops_api/llm/text_splitter/: charater.py
src/llmops_api/model/: knowledge.py  menu.py  plugins.py  role.py
src/llmops_api/plugins/registry/local/: local.yml
src/llmops_api/plugins/registry/local/now/: now.py  now.yml
src/llmops_api/plugins/registry/local/random_int/: random_int.py  random_int.yml
src/llmops_api/plugins/registry/local/uuid/: generate_uuid.py  generate_uuid.yml
src/llmops_api/repo/: action.py  document.py  knowledge.py  menu.py  retrieval_record.py  role.py  user.py
src/llmops_api/service/: action.py  auth.py  document.py  knowledge.py  menu.py  permissions.py  retrieval.py  role.py  user.py
src/llmops_api/tasks/: knowledge.py
src/llmops_api/util/: gen_uuid.py  priority_queue.py  sha256_with_salt.py
src/llmops_api/view/: action.py  auth.py  menu.py  permissions.py  role.py  user.py
test/: test_hello.py
