[project]
name = "llmops-api"
version = "0.1.0"
description = "LLM大语言模型应用编排系统后端API"
lisence = { text = "BSD-2-Clause" }
authors = [
    {name = "jeff.jiang.cd.cn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.61,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "celery (>=5.5.2,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "dependency-injector (>=4.47.1,<5.0.0)",
    "aiohttp (>=3.12.6,<4.0.0)",
    "stringcase (>=1.2.0,<2.0.0)",
    "pycasbin (>=1.45.0,<2.0.0)",
    "volcengine-python-sdk[ark] (>=4.0.1,<5.0.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "langchain-milvus (>=0.2.1,<0.3.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "dashscope (>=1.23.6,<2.0.0)",
]

[tool.poetry]
packages = [
    {include = "llmops_api", from = "src" }
]

[[tool.poetry.source]]
name = "tuna"
url = "http://mirrors.aliyun.com/pypi/simple/"


[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
notebook = "^7.4.3"
jupyterlab-language-pack-zh-cn = "^4.4.post0"


[tool.poetry.group.build.dependencies]
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
