[project]
name = "llmops-api"
version = "0.1.0"
description = "LLM大语言模型应用编排系统后端API"
readme = "README.md"
authors = [
    {name = "jeff.jiang.cd.cn@gmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard] >=0.115.12,<0.116.0",
    "langchain >=0.3.25,<0.4.0",
    "langchain-core >=0.3.61,<0.4.0",
    "langchain-community >=0.3.24,<0.4.0",
    "langgraph >=0.4.7,<0.5.0",
    "uvicorn[standard] >=0.34.2,<0.35.0",
    "celery[gevent,librabbitmq,sqlalchemy] >=5.5.3,<6.0.0",
    "python-dotenv >=1.1.0,<2.0.0",
    "loguru >=0.7.3,<0.8.0",
    "redis[hiredis] >=6.2.0,<7.0.0",
    "asyncpg >=0.30.0,<0.31.0",
    "alembic >=1.16.1,<2.0.0",
    "dependency-injector >=4.47.1,<5.0.0",
    "aiohttp >=3.12.6,<4.0.0",
    "stringcase >=1.2.0,<2.0.0",
    "pycasbin >=1.45.0,<2.0.0",
    "volcengine-python-sdk[ark] >=4.0.1,<5.0.0",
    "langchain-deepseek >=0.1.3,<0.2.0",
    "langchain-milvus >=0.2.1,<0.3.0",
    "langchain-huggingface >=0.3.0,<0.4.0",
    "sentence-transformers >=4.1.0,<5.0.0",
    "dashscope >=1.23.6,<2.0.0",
    "pdfminer.six ==20240706",
    "langchain-unstructured[local] >=0.1.6,<0.2.0",
    "urlextract >=1.9.0,<2.0.0",
    "psycopg >=3.2.9,<4.0.0",
    "msgpack-python >=0.5.6,<0.6.0",
    "gunicorn >= 23.0.0"
]

[project.scripts]
llmops-api = "llmops_api:main"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "notebook"}
]
lint = [
    "mypy>=1.17.0",
    "ruff >=0.11.11",
]
test = [
    "httpx >=0.28.1",
    "pytest >=8.3.5"
]
notebook = [
    "notebook >=7.4.3",
    "jupyterlab-language-pack-zh-cn >=4.4.post0"
]

[tool.uv]
default-groups = "all"

[[tool.uv.index]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
no_implicit_reexport = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
